[package]
name = "univiz"
version = "0.1.1"
edition = "2024"
license = "MIT"
description = "A command-line tool for analyzing Unicode strings, providing detailed information about graphemes, code points, and UTF-8 byte sequences"
repository = "https://github.com/bozenalabs/univiz"
homepage = "https://github.com/bozenalabs/univiz"
keywords = ["unicode", "grapheme", "utf8", "analysis", "cli"]
categories = ["command-line-utilities", "text-processing"]
authors = ["Bozena Labs"]

[dependencies]
unicode-segmentation = "1.12.0"
unicode-width = "0.2.2"
colored = "3.0"
unicode_names2 = "2.0.0"
clap = { version = "4.5", features = ["derive"] }
